microservices/gateway/manifests/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: image-registry.openshift-image-registry.svc:5000/remus/gateway
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - gateway
      from:
        kind: ImageStreamTag
        name: gateway:latest
    type: ImageChange
  strategy:
    type: Rolling
