microservices/gateway/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gateway
  name: gateway
  namespace: remus
spec:
  host: gateway-remus.apps.ocp.mylab.test
  port:
    targetPort: 8080
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
